services shape locked to bottom right corner, repositioned across screen sizes, no longer goes behind copy

--- a/craft/assets/css/custom/_services.css
+++ b/craft/assets/css/custom/_services.css
@@ -4,20 +4,12 @@
   transition: var(--transition-default);
 
   @media (min-width: 700px) {
-    transform-origin: bottom right;
-  }
-
-  @media (min-width: 700px) and (max-width: 1000px) {
     width: 90%;
   }
-  @media (min-width: 993px) and (max-width: 1100px) {
-    width: 55%;
-  }
-  @media (min-width: 1100px) {
-    min-width: 600px;
-    width: 40%;
-    padding-bottom: 4rem;
-    right: 100px;
+  @media (min-width: 993px) {
+    width: 600px;
+    padding-bottom: 0;
+    right: 0;
   }
 
   &--visible {
@@ -79,9 +71,30 @@
   width: 150%;
   min-width: 1740px;
   left: -1200px;
+
+  @media (min-width: 700px) {
+    transform: scale(1.5) !important;
+    bottom: -70px;
+    width: auto;
+    left: auto;
+    min-width: 0;
+  }
+  @media (min-width: 769px) {
+    bottom: -210px;
+    right: -100px;
+    transform: scaleX(1.5) scaleY(1) !important;
+  }
+  @media (min-width: 993px) {
+    bottom: -150px;
+    right: -250px;
+    transform: scaleX(1) !important;
+  }
+
   & svg {
-    width: 100%;
-    height: auto;
+    @media (max-width: 699px) {
+      width: 100%;
+      height: auto;
+    }
 
     &.mobile {
       display: block;
@@ -89,22 +102,6 @@
         display: none;
       }
     }
-  }
-
-  @media (min-width: 768px) {
-    min-width: 1240px;
-    left: auto;
-    right: -14%;
-    bottom: -90%;
-    & svg {
-      transform: scaleX(1.3) scaleY(0.7);
-    }
-  }
-  @media (min-width: 993px) {
-    bottom: -64%;
-    width: 200%;
-    left: -490px;
-    right: auto;
   }
 }
 
@@ -115,9 +112,10 @@
   transform: translateX(-50%);
   border-radius: 30px;
   padding: 12px 17px;
+  background: #F62944;
 
   @media (min-width: 700px) and (max-width: 1000px) {
-    left: -56px;
+    transform: translateX(calc(-50% - 56px));
   }
 
   @media (min-width: 768px) {
